[gd_scene load_steps=3 format=3 uid="uid://dr4jcq6n2vwqt"]

[ext_resource type="LabelSettings" uid="uid://dt4d8t41tnpa1" path="res://assets/GM_white_32.tres" id="1_epqxu"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_xk0iu"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xk0iu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/LevelHBox"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Level: "
label_settings = ExtResource("1_epqxu")
vertical_alignment = 1

[node name="LevelValue" type="Label" parent="MarginContainer/VBoxContainer/LevelHBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "##"
label_settings = ExtResource("1_epqxu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MovesHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MovesLabel" type="Label" parent="MarginContainer/VBoxContainer/MovesHBox"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Moves: "
label_settings = ExtResource("1_epqxu")

[node name="MovesValue" type="Label" parent="MarginContainer/VBoxContainer/MovesHBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "##"
label_settings = ExtResource("1_epqxu")
horizontal_alignment = 2

[node name="BestHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="BestScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/BestHBox"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Best:  "
label_settings = ExtResource("1_epqxu")

[node name="BestScoreValue" type="Label" parent="MarginContainer/VBoxContainer/BestHBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "##"
label_settings = ExtResource("1_epqxu")
horizontal_alignment = 2
